--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "masquerade-site",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "type": "module",
   "main": "index.js",
   "license": "MIT",
@@ -22,10 +22,10 @@
     "version:set": "node ../../set-version.js"
   },
   "devDependencies": {
+    "@types/dompurify": "3.0.5",
     "dotenv": "16.3.1",
     "vite": "5.0.5",
-    "vite-plugin-solid": "2.7.2",
-    "@types/dompurify": "3.0.5"
+    "vite-plugin-solid": "2.7.2"
   },
   "dependencies": {
     "@dfinity/ledger-icrc": "2.0.0",
@@ -33,11 +33,11 @@
     "@fort-major/masquerade-shared": "workspace:*",
     "@solidjs/router": "0.9.1",
     "chart.js": "4.4.1",
+    "dompurify": "3.0.6",
     "ismobilejs": "1.1.1",
     "js-big-decimal": "2.0.4",
     "solid-chartjs": "1.3.8",
     "solid-js": "1.8.7",
-    "solid-styled-components": "0.28.5",
-    "dompurify": "3.0.6"
+    "solid-styled-components": "0.28.5"
   }
 }
