--- a/apps/site/public/.ic-assets.json5
+++ b/apps/site/public/.ic-assets.json5
@@ -25,8 +25,8 @@
       // - We added img-src data: because data: images are used often.
       // - frame-ancestors: none mitigates clickjacking attacks. See https://owasp.org/www-community/attacks/Clickjacking.
       //
-      // [MSQ] We added more entries to script-src: cdnjs in order to fetch some libraries from it; several 'sha256-...' entries in order to enable MetaMask to work on firefox on differrent OS-es
-      "Content-Security-Policy": "default-src 'self';script-src 'self' 'unsafe-eval' https://cdnjs.cloudflare.com 'sha256-348d5w9kJu4h+i+sr85I6ciPXEchcniZs0NAIVvrUxM=' 'sha256-7WNRe20drB93fDeE6wXp+mRpZz4QnQJ0MS4oT5S5bi4=' 'sha256-avpYSMhuJi9WJxyEjI6GYMe1nMx5fWui+MNt0GpU354=' 'sha256-YS3QNE5QXiUUIM5MeZS0LnchkXKr//rinpZZO+rodCY=';connect-src 'self' https://icp0.io https://ic0.app https://*.ic0.app https://*.icp0.io;img-src 'self' data: https://nns.ic0.app https://3r4gx-wqaaa-aaaaq-aaaia-cai.icp0.io;style-src * 'unsafe-inline';style-src-elem * 'unsafe-inline';font-src *;object-src 'none';base-uri 'self';frame-ancestors 'none';form-action 'self';upgrade-insecure-requests;",
+      // [MSQ] We added more entries to script-src: cdnjs in order to fetch some libraries from it; also we've added unsafe-inline, so Metamask works in FireFox
+      "Content-Security-Policy": "default-src 'self' https://fwd.metamask.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com;connect-src 'self' https://icp0.io https://ic0.app https://*.ic0.app https://*.icp0.io wss://metamask-sdk-socket.metafi.codefi.network https://metamask-sdk-socket.metafi.codefi.network data:;img-src 'self' data: https://nns.ic0.app https://3r4gx-wqaaa-aaaaq-aaaia-cai.icp0.io;style-src * 'unsafe-inline';style-src-elem * 'unsafe-inline';font-src *;object-src 'none';base-uri 'self';frame-ancestors 'none';form-action 'self';upgrade-insecure-requests;",
 
       // Security: The permissions policy disables all features for security reasons. If your site needs such permissions, activate them.
       // To configure permissions go here https://www.permissionspolicy.com/
