--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@fort-major/masquerade-shared": "workspace:*",
-    "@metamask/detect-provider": "2.0.0",
+    "@metamask/sdk": "^0.14.3",
     "icrc-35": "^0.2.2"
   }
 }
