--- a/turbo.json
+++ b/turbo.json
@@ -38,7 +38,8 @@
             ]
         },
         "dev": {
-            "cache": false
+            "cache": false,
+            "persistent": true
         },
         "dev:deploy": {
             "cache": false
