--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "masquerade-demo",
+  "name": "msq-demo",
   "version": "0.2.6",
   "type": "module",
   "main": "index.js",
@@ -30,6 +30,6 @@
     "solid-js": "1.8.7",
     "@solidjs/router": "0.9.1",
     "solid-styled-components": "0.28.5",
-    "@fort-major/masquerade-client": "workspace:*"
+    "@fort-major/msq-client": "workspace:*"
   }
 }
