--- a/example.env
+++ b/example.env
@@ -7,7 +7,7 @@ MSQ_MODE="DEV"
 
 # for prod
 MSQ_SNAP_VERSION="0.2.0"
-MSQ_SNAP_ID="npm:@fort-major/masquerade"
+MSQ_SNAP_ID="npm:@fort-major/msq"
 MSQ_SNAP_SITE_ORIGIN="https://msq.tech"
 MSQ_DFX_NETWORK_HOST="icp0.io"
 MSQ_MODE="PROD"
