--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fort-major/masquerade-client",
+  "name": "@fort-major/msq-client",
   "version": "0.2.6",
   "main": "./dist/cjs/index",
   "module": "./dist/esm/index",
@@ -22,7 +22,7 @@
     "dotenv": "16.3.1"
   },
   "dependencies": {
-    "@fort-major/masquerade-shared": "workspace:*",
+    "@fort-major/msq-shared": "workspace:*",
     "@metamask/sdk": "^0.14.3",
     "icrc-35": "0.2.3"
   }
