--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fort-major/masquerade",
+  "name": "@fort-major/msq",
   "version": "0.2.6",
   "description": "Privacy-focused MetaMask snap for the Internet Computer (ICP)",
   "keywords": [
@@ -20,10 +20,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fort-major/masquerade.git"
+    "url": "https://github.com/fort-major/msq.git"
   },
   "bugs": {
-    "url": "https://github.com/fort-major/masquerade/issues"
+    "url": "https://github.com/fort-major/msq/issues"
   },
   "homepage": "https://icp.msq.tech",
   "scripts": {
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@dfinity/identity-secp256k1": "0.20.2",
-    "@fort-major/masquerade-shared": "workspace:*",
+    "@fort-major/msq-shared": "workspace:*",
     "@metamask/snaps-ui": "3.1.0"
   }
 }
