--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,11 +1,12 @@
 {
   "name": "msq-site",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "type": "module",
+  "private": true,
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "prod:build": "pnpm run propagateEnv && pnpm run version:set && tsc && vite build",
+    "prod:build": "pnpm run propagateEnv && tsc && vite build",
     "prod:deploy": "dfx deploy --network=ic",
     "prod:deployFE": "dfx deploy msq_frontend --no-asset-upgrade --network=ic",
     "prod:deployBE": "dfx deploy msq_statistics --network=ic",
@@ -18,8 +19,7 @@
     "propagateEnv": "node ../../propagate-env.js",
     "cargo:repair": "cargo build --target=wasm32-unknown-unknown",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
-    "format": "pnpm exec prettier src/**/*.{ts,tsx} --write",
-    "version:set": "node ../../set-version.js"
+    "format": "pnpm exec prettier src/**/*.{ts,tsx} --write"
   },
   "devDependencies": {
     "@types/dompurify": "3.0.5",
