--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,22 +1,20 @@
 {
   "name": "@fort-major/msq-client",
-  "version": "0.2.6",
+  "version": "0.2.8",
   "main": "./dist/cjs/index",
   "module": "./dist/esm/index",
   "unpkg": "./dist/esm/index",
   "types": "./dist/esm/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "prod:build": "rm -rf ./dist && tsc && tsc -p tsconfig.cjs.json && pnpm run version:set && node inline-env-vars.js",
+    "prod:build": "rm -rf ./dist && tsc && tsc -p tsconfig.cjs.json && node inline-env-vars.js",
     "prod:pub": "npm publish",
     "dev:build": "rm -rf ./dist && tsc && tsc -p tsconfig.cjs.json && node inline-env-vars.js",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
     "format": "pnpm exec prettier src/**/*.{ts,tsx} --write",
-    "doc": "typedoc src/**/*.{ts,tsx}",
-    "version:set": "node ../../set-version.js"
+    "doc": "typedoc src/**/*.{ts,tsx}"
   },
   "devDependencies": {
-    "@metamask/snaps-types": "3.1.0",
     "@metamask/types": "1.1.0",
     "@types/node": "20.10.3",
     "dotenv": "16.3.1"
@@ -24,6 +22,7 @@
   "dependencies": {
     "@fort-major/msq-shared": "workspace:*",
     "@metamask/sdk": "^0.14.3",
-    "icrc-35": "0.2.3"
+    "icrc-35": "0.2.3",
+    "ismobilejs": "1.1.1"
   }
 }
