--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,19 +1,18 @@
 {
   "name": "@fort-major/msq-shared",
-  "version": "0.2.6",
+  "version": "0.2.8",
   "main": "./dist/cjs/index",
   "module": "./dist/esm/index",
   "unpkg": "./dist/esm/index",
   "types": "./dist/esm/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "prod:build": "pnpm run version:set && tsc && tsc -p tsconfig.cjs.json",
+    "prod:build": "tsc && tsc -p tsconfig.cjs.json",
     "prod:pub": "npm publish",
     "dev:build": "tsc && tsc -p tsconfig.cjs.json",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
     "format": "pnpm exec prettier src/**/*.{ts,tsx} --write",
-    "doc": "typedoc src/**/*.{ts,tsx}",
-    "version:set": "node ../../set-version.js"
+    "doc": "typedoc src/**/*.{ts,tsx}"
   },
   "dependencies": {
     "cbor-x": "1.5.6"
