--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fort-major/msq",
-  "version": "0.2.6",
+  "version": "0.2.8",
   "description": "Privacy-focused MetaMask snap for the Internet Computer (ICP)",
   "keywords": [
     "MetaMask",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://icp.msq.tech",
   "scripts": {
-    "prod:build": "tsc && pnpm run version:set && pnpm run prod:build-snap",
+    "prod:build": "tsc && pnpm run prod:build-snap",
     "prod:build-snap": "mm-snap build -s ./src/index.ts",
     "prod:pub": "mm-snap manifest --fix && npm publish",
     "dev:build": "tsc && mm-snap build -s ./src/index.ts",
@@ -36,13 +36,11 @@
     "test": "jest",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
     "format": "pnpm exec prettier ./src/**/*.{ts,tsx} --write",
-    "version:set": "node ../../set-version.js",
     "doc": "typedoc ./src/**/*.{ts,tsx}"
   },
   "devDependencies": {
     "@metamask/snaps-cli": "3.0.5",
     "@metamask/snaps-jest": "4.0.1",
-    "@metamask/snaps-types": "3.1.0",
     "@types/jest": "29.5.10",
     "@types/node": "20.10.3",
     "cbor-x": "1.5.6",
@@ -52,6 +50,6 @@
   "dependencies": {
     "@dfinity/identity-secp256k1": "0.20.2",
     "@fort-major/msq-shared": "workspace:*",
-    "@metamask/snaps-ui": "3.1.0"
+    "@metamask/snaps-sdk": "^2.0.0"
   }
 }
