--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -15,7 +15,9 @@
     "doc": "typedoc src/**/*.{ts,tsx}"
   },
   "dependencies": {
-    "cbor-x": "1.5.6"
+    "@aws-crypto/crc32": "5.2.0",
+    "cbor-x": "1.5.6",
+    "jssha": "3.3.1"
   },
   "devDependencies": {
     "@types/jest": "29.5.10",
