fix txn history on prod, update ic host, add better cmds

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "msq-demo",
+  "name": "@fort-major/msq-demo",
   "private": true,
-  "version": "0.2.7",
+  "version": "0.0.1",
   "type": "module",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "prod:build": "pnpm run propagateEnv && tsc && vite build",
+    "prod:build:apps": "pnpm run prod:build",
     "prod:deploy": "dfx deploy --network=ic",
-    "prod:deployFE": "dfx deploy demo_frontend --no-asset-upgrade --network=ic",
-    "prod:deployBE": "dfx deploy demo_backend --network=ic",
+    "prod:deploy:frontend": "dfx deploy demo_frontend --no-asset-upgrade --network=ic",
+    "prod:deploy:demo": "pnpm run prod:deploy:frontend",
+    "prod:deploy:backend": "dfx deploy demo_backend --network=ic",
     "dev:build": "pnpm run propagateEnv && tsc && vite build --mode dev",
+    "dev:build:apps": "pnpm run dev:build",
     "dev": "pnpm run propagateEnv && vite --mode dev",
     "gen": "dfx generate",
     "dev:deploy": "dfx deploy",
-    "dev:deployFE": "dfx deploy demo_frontend --no-asset-upgrade",
-    "dev:deployBE": "dfx deploy demo_backend",
+    "dev:deploy:frontend": "dfx deploy demo_frontend --no-asset-upgrade",
+    "dev:deploy:demo": "pnpm run dev:deploy:frontend",
+    "dev:deploy:backend": "dfx deploy demo_backend",
     "propagateEnv": "node ../../propagate-env.js",
     "cargo:repair": "cargo build --target=wasm32-unknown-unknown",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
