--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "landing",
-  "version": "1.0.0",
+  "name": "@fort-major/msq-landing",
+  "version": "0.0.1",
   "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
     "prod:build": "rm -rf dist && sass ./styles/index.scss ./dist/index.css && pnpm run autoprefix && pnpm run pack",
-    "prod:deploy": "pnpm run prod:deployFE",
-    "prod:deployFE": "dfx deploy msq_landing --no-asset-upgrade --network=ic",
+    "prod:build:apps": "pnpm run prod:build",
+    "prod:deploy": "dfx deploy msq_landing --no-asset-upgrade --network=ic",
+    "prod:deploy:frontend": "pnpm run prod:deploy",
+    "prod:deploy:landing": "pnpm run prod:deploy",
+    "dev:build": "pnpm run prod:build",
+    "dev:build:apps": "pnpm run prod:build",
+    "dev:deploy": "dfx deploy msq_landing --no-asset-upgrade",
+    "dev:deploy:frontend": "pnpm run dev:deploy",
+    "dev:deploy:landing": "pnpm run dev:deploy",
     "watch": "sass --watch ./styles/index.scss ./dist/index.css",
     "dev": "pnpm run prod:build && cd dist && static-server",
     "pack": "pnpm run pack-index && pnpm run pack-images && pnpm run pack-fonts && pnpm run pack-other && pnpm run pack-well-known && pnpm run pack-csp",
