--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "msq-site",
-  "version": "0.2.7",
+  "name": "@fort-major/msq-site",
+  "version": "0.0.1",
   "type": "module",
   "private": true,
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "prod:build": "pnpm run propagateEnv && tsc && vite build",
+    "prod:build:apps": "pnpm run prod:build",
     "prod:deploy": "dfx deploy --network=ic",
-    "prod:deployFE": "dfx deploy msq_frontend --no-asset-upgrade --network=ic",
-    "prod:deployBE": "dfx deploy msq_statistics --network=ic",
+    "prod:deploy:frontend": "dfx deploy msq_frontend --no-asset-upgrade --network=ic",
+    "prod:deploy:site": "pnpm run prod:deploy:frontend",
+    "prod:deploy:backend": "dfx deploy msq_statistics --network=ic",
     "dev:build": "pnpm run propagateEnv && tsc && vite build --mode dev",
+    "dev:build:apps": "pnpm run dev:build",
     "dev": "pnpm run propagateEnv && vite --mode dev",
     "dev:gen": "dfx generate",
     "dev:deploy": "dfx deploy",
-    "dev:deployFE": "dfx deploy msq_frontend --no-asset-upgrade",
-    "dev:deployBE": "dfx deploy msq_statistics",
+    "dev:deploy:frontend": "dfx deploy msq_frontend --no-asset-upgrade",
+    "dev:deploy:site": "pnpm run dev:deploy:frontend",
+    "dev:deploy:backend": "dfx deploy msq_statistics",
     "propagateEnv": "node ../../propagate-env.js",
     "cargo:repair": "cargo build --target=wasm32-unknown-unknown",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
@@ -28,7 +32,8 @@
     "vite-plugin-solid": "2.7.2"
   },
   "dependencies": {
-    "@dfinity/ledger-icrc": "2.0.0",
+    "@dfinity/ledger-icp": "^2.2",
+    "@dfinity/ledger-icrc": "^2.1",
     "@fort-major/msq-client": "workspace:*",
     "@fort-major/msq-shared": "workspace:*",
     "@solidjs/router": "0.9.1",
