--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fort-major/msq",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "Privacy-focused MetaMask snap for the Internet Computer (ICP)",
   "keywords": [
     "MetaMask",
@@ -27,12 +27,15 @@
   },
   "homepage": "https://icp.msq.tech",
   "scripts": {
-    "prod:build": "tsc && pnpm run prod:build-snap",
-    "prod:build-snap": "mm-snap build -s ./src/index.ts",
-    "prod:pub": "mm-snap manifest --fix && npm publish",
+    "prod:build": "tsc && pnpm run prod:build:snap",
+    "prod:build:snap": "mm-snap build -s ./src/index.ts",
+    "prod:build:apps": "pnpm run prod:build",
+    "pub": "mm-snap manifest --fix && npm publish",
     "dev:build": "tsc && mm-snap build -s ./src/index.ts",
+    "dev:build:snap": "pnpm run dev:build",
+    "dev:build:apps": "pnpm run dev:build",
     "dev": "mm-snap watch -s ./src/index.ts -d dist",
-    "dev:runSnap": "pnpm run dev",
+    "dev:run:snap": "pnpm run dev",
     "test": "jest",
     "lint": "eslint --fix src --ext .ts --ext .tsx",
     "format": "pnpm exec prettier ./src/**/*.{ts,tsx} --write",
