--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -34,6 +34,7 @@
     "solid-js": "1.8.7",
     "@solidjs/router": "0.9.1",
     "solid-styled-components": "0.28.5",
-    "@fort-major/msq-client": "workspace:*"
+    "@fort-major/msq-client": "workspace:*",
+    "@fort-major/msq-shared": "workspace:*"
   }
 }
