remove unused imports, fix state update timestamps, bump versions, add missing token error page

--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "prod:build": "rm -rf dist && sass ./styles/index.scss ./dist/index.css && pnpm run autoprefix && pnpm run pack",
     "prod:build:apps": "pnpm run prod:build",
-    "prod:deploy": "dfx deploy msq_landing --no-asset-upgrade --network=ic",
+    "prod:deploy": "dfx deploy msq_landing --network=ic",
     "prod:deploy:frontend": "pnpm run prod:deploy",
     "prod:deploy:landing": "pnpm run prod:deploy",
     "dev:build": "pnpm run prod:build",
     "dev:build:apps": "pnpm run prod:build",
-    "dev:deploy": "dfx deploy msq_landing --no-asset-upgrade",
+    "dev:deploy": "dfx deploy msq_landing",
     "dev:deploy:frontend": "pnpm run dev:deploy",
     "dev:deploy:landing": "pnpm run dev:deploy",
     "watch": "sass --watch ./styles/index.scss ./dist/index.css",
