--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -9,7 +9,7 @@
     "prod:build": "pnpm run propagateEnv && tsc && vite build",
     "prod:build:apps": "pnpm run prod:build",
     "prod:deploy": "dfx deploy --network=ic",
-    "prod:deploy:frontend": "dfx deploy msq_frontend --no-asset-upgrade --network=ic",
+    "prod:deploy:frontend": "dfx deploy msq_frontend --network=ic",
     "prod:deploy:site": "pnpm run prod:deploy:frontend",
     "prod:deploy:backend": "dfx deploy msq_statistics --network=ic",
     "dev:build": "pnpm run propagateEnv && tsc && vite build --mode dev",
@@ -17,7 +17,7 @@
     "dev": "pnpm run propagateEnv && vite --mode dev",
     "dev:gen": "dfx generate",
     "dev:deploy": "dfx deploy",
-    "dev:deploy:frontend": "dfx deploy msq_frontend --no-asset-upgrade",
+    "dev:deploy:frontend": "dfx deploy msq_frontend",
     "dev:deploy:site": "pnpm run dev:deploy:frontend",
     "dev:deploy:backend": "dfx deploy msq_statistics",
     "propagateEnv": "node ../../propagate-env.js",
