--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "prod:build": "rm -rf dist && sass ./styles/index.scss ./dist/index.css && pnpm run autoprefix && pnpm run pack",
     "prod:build:apps": "pnpm run prod:build",
+    "prod:build:landing": "pnpm run prod:build",
     "prod:deploy": "dfx deploy msq_landing --network=ic",
     "prod:deploy:frontend": "pnpm run prod:deploy",
     "prod:deploy:landing": "pnpm run prod:deploy",
@@ -16,7 +17,7 @@
     "dev:deploy:frontend": "pnpm run dev:deploy",
     "dev:deploy:landing": "pnpm run dev:deploy",
     "watch": "sass --watch ./styles/index.scss ./dist/index.css",
-    "dev": "pnpm run prod:build && cd dist && static-server",
+    "dev": "pnpm run prod:build && cd dist && static-server --no-cache",
     "pack": "pnpm run pack-index && pnpm run pack-images && pnpm run pack-fonts && pnpm run pack-other && pnpm run pack-well-known && pnpm run pack-csp",
     "pack-images": "cp -r img dist",
     "pack-fonts": "cp -r fonts dist",
