add third party wallets, refactor stores

--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@dfinity/ledger-icp": "^2.2",
     "@dfinity/ledger-icrc": "^2.3",
+    "@dfinity/auth-client": "^1.3",
     "@fort-major/msq-client": "workspace:*",
     "@fort-major/msq-shared": "workspace:*",
     "@solidjs/router": "0.13.3",
