--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -33,9 +33,9 @@
     "vite-plugin-solid": "2.7.2"
   },
   "dependencies": {
+    "@dfinity/auth-client": "^1.3",
     "@dfinity/ledger-icp": "^2.2",
     "@dfinity/ledger-icrc": "^2.3",
-    "@dfinity/auth-client": "^1.3",
     "@fort-major/msq-client": "workspace:*",
     "@fort-major/msq-shared": "workspace:*",
     "@solidjs/router": "0.13.3",
@@ -45,6 +45,7 @@
     "js-big-decimal": "2.0.4",
     "solid-chartjs": "1.3.8",
     "solid-js": "1.8.7",
-    "solid-styled-components": "0.28.5"
+    "solid-styled-components": "0.28.5",
+    "solid-toast": "0.5.0"
   }
 }
