--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -38,6 +38,7 @@
     "@dfinity/ledger-icrc": "^2.3",
     "@fort-major/msq-client": "workspace:*",
     "@fort-major/msq-shared": "workspace:*",
+    "@fort-major/reliable-solid-router": "link:../../../reliable-solid-router",
     "@solidjs/router": "0.13.3",
     "chart.js": "4.4.1",
     "dompurify": "3.0.6",
