--- a/apps/site/src/backend/payment_hub/Cargo.toml
+++ b/apps/site/src/backend/payment_hub/Cargo.toml
@@ -14,6 +14,7 @@ blake3 = "^1.5"
 candid = "^0.10"
 ic-cdk = "^0.13"
 ic-cdk-timers = "^0.7"
+icrc-ledger-types = "^0.1"
 serde = "^1.0"
 chrono = { version = "^0.4", default-features = false }
 tinystr = "^0.4"
